k8s/movies_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movies-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: movies
  template:
    metadata:
      labels:
        app: movies
    spec:
      containers:
      - name: movies
        image: jerryelikem/movies-service:latest
        ports:
        - containerPort: 4001
        
      #   volumeMounts:
      #   - name: secret-volume
      #     mountPath: "/etc/config/"   
      #     subPath: ".env"      
      #     readOnly: true 
                        
      # volumes:
      # - name: secret-volume
      #   secret:
      #     secretName: db-secret

---

apiVersion: v1
kind: Service
metadata:
  name: movies-service
spec:
  selector:
    app: movies
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
