k8s/users_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users
  template:
    metadata:
      labels:
        app: users
    spec:
      containers:
      - name: users
        image: jerryelikem/users-service:latest
        ports:
        - containerPort: 4007

      #   volumeMounts:
      #   - name: secret-volume
      #     mountPath: "/etc/config/"   
      #     subPath: ".env"      
      #     readOnly: true 
                        
      # volumes:
      # - name: secret-volume
      #   secret:
      #     secretName: db-secret

---

apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 4007
      targetPort: 4007
